--- a/winger/src/pages/contact/contact.module.css
+++ b/winger/src/pages/contact/contact.module.css
@@ -37,18 +37,18 @@
   }
   
   .submitButton {
-    background-color: #007BFF; /* Blue background for button */
-    color: #fff; /* White text color */
+    background-color: #007BFF; 
+    color: #fff;
     border: none;
     padding: 10px 20px;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
-    width: 100%; /* Button takes full width */
+    width: 100%; 
   }
   
   .submitButton:hover {
-    background-color: #0056b3; /* Darker blue on hover */
+    background-color: #0056b3;
   }
   
   .titleContact {
