--- a/winger/src/pages/header/header.module.css
+++ b/winger/src/pages/header/header.module.css
@@ -1,6 +1,7 @@
 .header {
   width: 100%;
-  background-color: white;
+  background-color: rgb(247, 245, 245);
+  color: #000;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
